<resources>
    <string name="app_name">Balloon Popper</string>
    <string name="play_game">Play game</string>
    <string name="stop_game">Stop game</string>
    <string name="score_label">Score:</string>
    <string name="maxNumber">999</string>
    <string name="level_label">Level:</string>
    <string name="more_levels_than_ever">More Levels than Ever!</string>
    <string name="new_top_score">New Top Score!</string>
    <string name="your_top_score_is">Top score: %x</string>
    <string name="you_completed_n_levels">Levels completed: %x</string>
    <string name="game_over">Game over!</string>
    <string name="missed_that_one">Missed that one!</string>
    <string name="you_finished_level_n">You finished level %x!</string>
    <string name="popping_pin">Popping Pin</string>

</resources>
