<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.davidgassner.android.balloonpopper.MainActivity">

    <!-- Container for the game action-->
    <FrameLayout
        android:id="@+id/content_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Container for pin icons, top right -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pushpin1"
            android:layout_width="@dimen/pin_size"
            android:layout_height="@dimen/pin_size"
            android:contentDescription="@string/popping_pin"
            android:src="@drawable/pin"
            android:tint="@color/pinColor" />

        <ImageView
            android:id="@+id/pushpin2"
            android:layout_width="@dimen/pin_size"
            android:layout_height="@dimen/pin_size"
            android:contentDescription="@string/popping_pin"
            android:src="@drawable/pin"
            android:tint="@color/pinColor" />

        <ImageView
            android:id="@+id/pushpin3"
            android:layout_width="@dimen/pin_size"
            android:layout_height="@dimen/pin_size"
            android:contentDescription="@string/popping_pin"
            android:src="@drawable/pin"
            android:tint="@color/pinColor" />

        <ImageView
            android:id="@+id/pushpin4"
            android:layout_width="@dimen/pin_size"
            android:layout_height="@dimen/pin_size"
            android:contentDescription="@string/popping_pin"
            android:src="@drawable/pin"
            android:tint="@color/pinColor" />

        <ImageView
            android:id="@+id/pushpin5"
            android:layout_width="@dimen/pin_size"
            android:layout_height="@dimen/pin_size"
            android:contentDescription="@string/popping_pin"
            android:src="@drawable/pin"
            android:tint="@color/pinColor" />

    </LinearLayout>

    <!-- Buttons and status displays -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/lightGrey">

        <Button
            android:id="@+id/go_button"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/play_game" />

        <LinearLayout
            android:id="@+id/status_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            tools:ignore="RelativeOverlap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_label"
                android:textSize="@dimen/status_text_size"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/level_display"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:gravity="end"
                android:text="@string/maxNumber"
                android:textSize="@dimen/status_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/score_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_label"
                android:textSize="@dimen/status_text_size"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/score_display"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:gravity="end"
                android:text="@string/maxNumber"
                android:textSize="@dimen/status_text_size"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>